k8s/imagegallery-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagegallery-client-app
spec:
  selector:
    matchLabels:
      app: imagegallery-client-app
  replicas: 1
  template:
    metadata:
      labels:
        app: imagegallery-client-app
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "imagegallery-client"
        dapr.io/app-port: "7184"
        dapr.io/config: "tracing"
        dapr.io/enable-metrics: "true"
        dapr.io/metrics-port: "9090"        
    spec:      
      hostAliases:
      - ip: "192.168.1.16"
        hostnames:
        - "idp.imagegallery.com"
        - "api.imagegallery.com"
        - "client.imagegallery.com"
      containers:
      - name: imagegallery-client
        image: tmather99/imagegallery-client:v1
        ports:
        - containerPort: 7184
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"  
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: imagegallery-client-service
spec:
  selector:
    app: imagegallery-client-app  
  type: LoadBalancer  
  ports:
    - protocol: TCP 
      port: 7184
      targetPort: 7184
